--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@dynamic-labs/sdk-react-core": "*",
+    "viem": "*",
+    "@dynamic-labs/ethereum": "*"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +37,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "typescript": "4.9.5"
   }
 }
